--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -1,91 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".QuestionActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Mot 1"
-        android:textColor="@android:color/transparent"
-        android:background="@color/white"
-        android:id="@+id/textView1"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Mot 2"
-        android:textColor="@android:color/transparent"
-        android:background="@color/white"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/textView1"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Mot 3"
-        android:textColor="@android:color/transparent"
-        android:background="@color/white"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Mot 4"
-        android:textColor="@android:color/transparent"
-        android:background="@color/white"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Mot 5"
-        android:textColor="@android:color/transparent"
-        android:background="@color/white"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Mot 6"
-        android:textColor="@android:color/transparent"
-        android:background="@color/white"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/textView5"
-        android:layout_centerHorizontal="true" />
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="20dp"
+        style="@style/Widget.ProgressBar.Vertical"
+        android:layout_width="20dp"
+        android:layout_height="300dp"
 
-        android:id="@+id/progressBar"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="30dp"
 
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/textView6" />
+        android:id="@+id/progressBar" />
+
+    <TextView
+        android:layout_width="150dp"
+        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:hint="Mot 1"
+        android:textColor="@android:color/transparent"
+        android:id="@+id/textView1"
+        android:background="@color/white"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@+id/progressBar"
+        android:layout_toEndOf="@+id/progressBar" />
+
+    <TextView
+        android:layout_width="150dp"
+        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:hint="Mot 2"
+        android:textColor="@android:color/transparent"
+        android:id="@+id/textView2"
+        android:background="@color/white"
+        android:layout_marginTop="70dp"
+        android:layout_toRightOf="@+id/progressBar"
+        android:layout_toEndOf="@+id/progressBar" />
+
+    <TextView
+        android:layout_width="150dp"
+        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:hint="Mot 3"
+        android:textColor="@android:color/transparent"
+        android:id="@+id/textView3"
+        android:background="@color/white"
+        android:layout_marginTop="120dp"
+        android:layout_toRightOf="@+id/progressBar"
+        android:layout_toEndOf="@+id/progressBar" />
+
+    <TextView
+        android:layout_width="150dp"
+        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:hint="Mot 4"
+        android:textColor="@android:color/transparent"
+        android:id="@+id/textView4"
+        android:background="@color/white"
+        android:layout_marginTop="170dp"
+        android:layout_toRightOf="@+id/progressBar"
+        android:layout_toEndOf="@+id/progressBar" />
+
+    <TextView
+        android:layout_width="150dp"
+        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:hint="Mot 5"
+        android:textColor="@android:color/transparent"
+        android:id="@+id/textView5"
+        android:background="@color/white"
+        android:layout_marginTop="220dp"
+        android:layout_toRightOf="@+id/progressBar"
+        android:layout_toEndOf="@+id/progressBar" />
+
+    <TextView
+        android:layout_width="150dp"
+        android:textAlignment="center"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:hint="Mot 6"
+        android:textColor="@android:color/transparent"
+        android:id="@+id/textView6"
+        android:background="@color/white"
+        android:layout_marginTop="270dp"
+        android:layout_toRightOf="@+id/progressBar"
+        android:layout_toEndOf="@+id/progressBar" />
 
     <EditText
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:text=""
+        android:hint="Réponse"
         android:id="@+id/textAnswer"
+        android:background="@color/white"
+        android:layout_marginTop="20dp"
         android:layout_below="@id/progressBar"
         android:layout_centerHorizontal="true" />
 
@@ -95,6 +109,7 @@
         android:text="Valider"
         android:background="@drawable/buttonflat"
         android:id="@+id/button_validate"
+        android:layout_marginTop="20dp"
         android:layout_below="@id/textAnswer"
         android:layout_centerHorizontal="true" />
 
