--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -10,85 +10,90 @@
 
         android:layout_marginTop="80dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginRight="30dp"
 
         android:id="@+id/progressBar" />
 
     <TextView
         android:layout_width="150dp"
         android:textAlignment="center"
-        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:hint="Mot 1"
         android:textColor="@android:color/transparent"
         android:id="@+id/textView1"
         android:background="@color/white"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="80dp"
         android:layout_toRightOf="@+id/progressBar"
         android:layout_toEndOf="@+id/progressBar" />
 
     <TextView
         android:layout_width="150dp"
         android:textAlignment="center"
-        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:hint="Mot 2"
         android:textColor="@android:color/transparent"
         android:id="@+id/textView2"
         android:background="@color/white"
-        android:layout_marginTop="120dp"
+        android:layout_below="@id/textView1"
         android:layout_toRightOf="@+id/progressBar"
         android:layout_toEndOf="@+id/progressBar" />
 
     <TextView
         android:layout_width="150dp"
         android:textAlignment="center"
-        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:hint="Mot 3"
         android:textColor="@android:color/transparent"
         android:id="@+id/textView3"
         android:background="@color/white"
-        android:layout_marginTop="170dp"
+        android:layout_below="@id/textView2"
         android:layout_toRightOf="@+id/progressBar"
         android:layout_toEndOf="@+id/progressBar" />
 
     <TextView
         android:layout_width="150dp"
         android:textAlignment="center"
-        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:hint="Mot 4"
         android:textColor="@android:color/transparent"
         android:id="@+id/textView4"
         android:background="@color/white"
-        android:layout_marginTop="220dp"
+        android:layout_below="@id/textView3"
         android:layout_toRightOf="@+id/progressBar"
         android:layout_toEndOf="@+id/progressBar" />
 
     <TextView
         android:layout_width="150dp"
         android:textAlignment="center"
-        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:hint="Mot 5"
         android:textColor="@android:color/transparent"
         android:id="@+id/textView5"
         android:background="@color/white"
-        android:layout_marginTop="270dp"
+        android:layout_below="@id/textView4"
         android:layout_toRightOf="@+id/progressBar"
         android:layout_toEndOf="@+id/progressBar" />
 
     <TextView
         android:layout_width="150dp"
         android:textAlignment="center"
-        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:hint="Mot 6"
         android:textColor="@android:color/transparent"
         android:id="@+id/textView6"
         android:background="@color/white"
-        android:layout_marginTop="320dp"
+        android:layout_below="@id/textView5"
         android:layout_toRightOf="@+id/progressBar"
         android:layout_toEndOf="@+id/progressBar" />
 
@@ -114,5 +119,25 @@
         android:layout_marginTop="20dp"
         android:layout_below="@id/textAnswer"
         android:layout_centerHorizontal="true" />
+
+    <View style="@style/Divider"
+        android:layout_marginTop="130dp"
+        android:layout_marginLeft="50dp" />
+
+    <View style="@style/Divider"
+        android:layout_marginTop="180dp"
+        android:layout_marginLeft="50dp"/>
+
+    <View style="@style/Divider"
+        android:layout_marginTop="230dp"
+        android:layout_marginLeft="50dp"/>
+
+    <View style="@style/Divider"
+        android:layout_marginTop="280dp"
+        android:layout_marginLeft="50dp"/>
+
+    <View style="@style/Divider"
+        android:layout_marginTop="330dp"
+        android:layout_marginLeft="50dp"/>
 
 </RelativeLayout>
