--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,4 +38,10 @@
         <item name="android:maxWidth">12dip</item>
     </style>
 
+    <style name="Divider">
+        <item name="android:layout_width">170dp</item>
+        <item name="android:layout_height">3dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
+    </style>
+
 </resources>
