--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -3,99 +3,125 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ProgressBar
-        style="@style/Widget.ProgressBar.Vertical"
-        android:layout_width="20dp"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
         android:layout_height="300dp"
+        android:id="@+id/layoutQuestion"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="80dp">
 
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="50dp"
+        <ProgressBar
+            style="@style/Widget.ProgressBar.Vertical"
+            android:layout_width="20dp"
+            android:layout_height="300dp"
 
-        android:id="@+id/progressBar" />
+            android:id="@+id/progressBar" />
 
-    <TextView
-        android:layout_width="150dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:hint="Mot 1"
-        android:textColor="@android:color/transparent"
-        android:id="@+id/textView1"
-        android:background="@color/white"
-        android:layout_marginTop="80dp"
-        android:layout_toRightOf="@+id/progressBar"
-        android:layout_toEndOf="@+id/progressBar" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="150dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:hint="Mot 2"
-        android:textColor="@android:color/transparent"
-        android:id="@+id/textView2"
-        android:background="@color/white"
-        android:layout_below="@id/textView1"
-        android:layout_toRightOf="@+id/progressBar"
-        android:layout_toEndOf="@+id/progressBar" />
+            <TextView
+                android:layout_width="150dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_height="50dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:hint="Mot 1"
+                android:textColor="@android:color/transparent"
+                android:id="@+id/textView1"
+                android:background="@color/blueVeryDark" />
 
-    <TextView
-        android:layout_width="150dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:hint="Mot 3"
-        android:textColor="@android:color/transparent"
-        android:id="@+id/textView3"
-        android:background="@color/white"
-        android:layout_below="@id/textView2"
-        android:layout_toRightOf="@+id/progressBar"
-        android:layout_toEndOf="@+id/progressBar" />
+            <TextView
+                android:layout_width="150dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_height="50dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:hint="Mot 2"
+                android:textColor="@android:color/transparent"
+                android:id="@+id/textView2"
+                android:background="@color/blueVeryDark" />
 
-    <TextView
-        android:layout_width="150dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:hint="Mot 4"
-        android:textColor="@android:color/transparent"
-        android:id="@+id/textView4"
-        android:background="@color/white"
-        android:layout_below="@id/textView3"
-        android:layout_toRightOf="@+id/progressBar"
-        android:layout_toEndOf="@+id/progressBar" />
+            <TextView
+                android:layout_width="150dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_height="50dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:hint="Mot 3"
+                android:textColor="@android:color/transparent"
+                android:id="@+id/textView3"
+                android:background="@color/blueVeryDark" />
 
-    <TextView
-        android:layout_width="150dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:hint="Mot 5"
-        android:textColor="@android:color/transparent"
-        android:id="@+id/textView5"
-        android:background="@color/white"
-        android:layout_below="@id/textView4"
-        android:layout_toRightOf="@+id/progressBar"
-        android:layout_toEndOf="@+id/progressBar" />
+            <TextView
+                android:layout_width="150dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_height="50dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:hint="Mot 4"
+                android:textColor="@android:color/transparent"
+                android:id="@+id/textView4"
+                android:background="@color/blueVeryDark" />
 
-    <TextView
-        android:layout_width="150dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:hint="Mot 6"
-        android:textColor="@android:color/transparent"
-        android:id="@+id/textView6"
-        android:background="@color/white"
-        android:layout_below="@id/textView5"
-        android:layout_toRightOf="@+id/progressBar"
-        android:layout_toEndOf="@+id/progressBar" />
+            <TextView
+                android:layout_width="150dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_height="50dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:hint="Mot 5"
+                android:textColor="@android:color/transparent"
+                android:id="@+id/textView5"
+                android:background="@color/blueVeryDark" />
+
+            <TextView
+                android:layout_width="150dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:layout_height="50dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:hint="Mot 6"
+                android:textColor="@android:color/transparent"
+                android:id="@+id/textView6"
+                android:background="@color/blueVeryDark" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="300dp"
+        android:layout_marginTop="80dp">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal">
+
+            <View style="@style/Divider"
+                android:layout_marginTop="50dp"/>
+
+            <View style="@style/Divider"
+                android:layout_marginTop="47dp"/>
+
+            <View style="@style/Divider"
+                android:layout_marginTop="47dp"/>
+
+            <View style="@style/Divider"
+                android:layout_marginTop="47dp"/>
+
+            <View style="@style/Divider"
+                android:layout_marginTop="47dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <EditText
         android:layout_width="200dp"
@@ -106,8 +132,8 @@
         android:hint="Réponse"
         android:id="@+id/textAnswer"
         android:background="@color/white"
+        android:layout_below="@id/layoutQuestion"
         android:layout_marginTop="20dp"
-        android:layout_below="@id/progressBar"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -120,24 +146,5 @@
         android:layout_below="@id/textAnswer"
         android:layout_centerHorizontal="true" />
 
-    <View style="@style/Divider"
-        android:layout_marginTop="130dp"
-        android:layout_marginLeft="50dp" />
-
-    <View style="@style/Divider"
-        android:layout_marginTop="180dp"
-        android:layout_marginLeft="50dp"/>
-
-    <View style="@style/Divider"
-        android:layout_marginTop="230dp"
-        android:layout_marginLeft="50dp"/>
-
-    <View style="@style/Divider"
-        android:layout_marginTop="280dp"
-        android:layout_marginLeft="50dp"/>
-
-    <View style="@style/Divider"
-        android:layout_marginTop="330dp"
-        android:layout_marginLeft="50dp"/>
 
 </RelativeLayout>
