--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -3,13 +3,25 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/current_score"
+        android:textColor="@color/white"
+        android:id="@+id/textViewCurrScore"
+        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"/>
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="300dp"
         android:id="@+id/layoutQuestion"
         android:gravity="center_horizontal"
-        android:layout_marginTop="80dp">
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/textViewCurrScore">
+
 
         <ProgressBar
             style="@style/Widget.ProgressBar.Vertical"
