--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -144,6 +144,7 @@
         android:layout_height="wrap_content"
         android:imeOptions="actionDone"
         android:singleLine="true"
+        android:inputType="text|textNoSuggestions"
         android:text=""
         android:hint="Réponse"
         android:id="@+id/textAnswer"
