Nouveaux interfaces choix du mode de jeu, nouveau style de boutons; nouveaux interfaces en cours

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,7 @@
     <item name="greyVeryDark" type="color">#212121</item>
 
     <item name="white" type="color">#FFFFFF</item>
+    <item name="black" type="color">#000000</item>
+    <item name="green" type="color">#44CC44</item>
+
 </resources>
