--- a/app/src/main/res/drawable/buttonflat_greenstroke.xml
+++ b/app/src/main/res/drawable/buttonflat_greenstroke.xml
@@ -19,8 +19,8 @@
             />
 
         <stroke
-            android:width="1dp"
-            android:color="@color/greyVeryDark"
+            android:width="5dp"
+            android:color="@color/green"
             />
     </shape>
 </item>
