--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -6,11 +6,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/current_score"
         android:textColor="@color/white"
         android:id="@+id/textViewCurrScore"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"/>
 
     <LinearLayout
@@ -36,7 +36,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="220dp"
                 android:textAlignment="center"
                 android:gravity="center"
                 android:layout_height="50dp"
@@ -47,7 +47,7 @@
                 android:background="@color/blueVeryDark" />
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="220dp"
                 android:textAlignment="center"
                 android:gravity="center"
                 android:layout_height="50dp"
@@ -55,10 +55,10 @@
                 android:hint="Mot 2"
                 android:textColor="@android:color/transparent"
                 android:id="@+id/textView2"
-                android:background="@color/blueVeryDark" />
+                android:background="@color/bluegreyLight" />
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="220dp"
                 android:textAlignment="center"
                 android:gravity="center"
                 android:layout_height="50dp"
@@ -69,7 +69,7 @@
                 android:background="@color/blueVeryDark" />
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="220dp"
                 android:textAlignment="center"
                 android:gravity="center"
                 android:layout_height="50dp"
@@ -77,10 +77,10 @@
                 android:hint="Mot 4"
                 android:textColor="@android:color/transparent"
                 android:id="@+id/textView4"
-                android:background="@color/blueVeryDark" />
+                android:background="@color/bluegreyLight" />
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="220dp"
                 android:textAlignment="center"
                 android:gravity="center"
                 android:layout_height="50dp"
@@ -91,7 +91,7 @@
                 android:background="@color/blueVeryDark" />
 
             <TextView
-                android:layout_width="150dp"
+                android:layout_width="220dp"
                 android:textAlignment="center"
                 android:gravity="center"
                 android:layout_height="50dp"
@@ -99,44 +99,9 @@
                 android:hint="Mot 6"
                 android:textColor="@android:color/transparent"
                 android:id="@+id/textView6"
-                android:background="@color/blueVeryDark" />
+                android:background="@color/bluegreyLight" />
 
         </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="80dp">
-
-            <View style="@style/Divider"
-                android:layout_width="170dp"
-                android:layout_height="3dp"
-                android:layout_marginTop="50dp"/>
-
-            <View style="@style/Divider"
-                android:layout_width="170dp"
-                android:layout_height="3dp"
-                android:layout_marginTop="47dp"/>
-
-            <View style="@style/Divider"
-                android:layout_width="170dp"
-                android:layout_height="3dp"
-                android:layout_marginTop="47dp"/>
-
-            <View style="@style/Divider"
-                android:layout_width="170dp"
-                android:layout_height="3dp"
-                android:layout_marginTop="47dp"/>
-
-            <View style="@style/Divider"
-                android:layout_width="170dp"
-                android:layout_height="3dp"
-                android:layout_marginTop="47dp"/>
-
-
     </LinearLayout>
 
     <EditText
