fake friend list, timer question à 12s, tous les médias sélectionnés par défaut

--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -12,8 +12,8 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=""
-            android:hint="@string/null_question"
+            android:text="@string/first_question"
+            android:textColor="@color/white"
             android:id="@+id/textViewQuestion1"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
@@ -24,8 +24,7 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=""
-            android:hint="@string/null_question"
+            android:text="@string/second_question"
             android:id="@+id/textViewQuestion2"
             android:layout_below="@+id/textViewQuestion1"
             android:layout_centerHorizontal="true"
@@ -36,8 +35,8 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=""
-            android:hint="@string/null_question"
+            android:text="@string/third_question"
+            android:textColor="@color/white"
             android:id="@+id/textViewQuestion3"
             android:layout_below="@+id/textViewQuestion2"
             android:layout_centerHorizontal="true"
@@ -48,8 +47,7 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=""
-            android:hint="@string/null_question"
+            android:text="@string/fourth_question"
             android:id="@+id/textViewQuestion4"
             android:layout_below="@+id/textViewQuestion3"
             android:layout_centerHorizontal="true"
@@ -60,8 +58,8 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=""
-            android:hint="@string/null_question"
+            android:text="@string/fifth_question"
+            android:textColor="@color/white"
             android:id="@+id/textViewQuestion5"
             android:layout_below="@+id/textViewQuestion4"
             android:layout_centerHorizontal="true"
@@ -82,8 +80,8 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:hint="@string/null_score"
+            android:text="@string/null_score"
+            android:textColor="@color/white"
             android:id="@+id/textViewScoreP1Q1"
             android:layout_toLeftOf="@+id/textViewQuestion1"
             android:gravity="center_vertical|center_horizontal"
@@ -93,8 +91,7 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:hint="@string/null_score"
+            android:text="@string/null_score"
             android:id="@+id/textViewScoreP1Q2"
             android:layout_below="@id/textViewScoreP1Q1"
             android:layout_toLeftOf="@+id/textViewQuestion2"
@@ -105,8 +102,8 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:hint="@string/null_score"
+            android:text="@string/null_score"
+            android:textColor="@color/white"
             android:id="@+id/textViewScoreP1Q3"
             android:layout_below="@id/textViewScoreP1Q2"
             android:layout_toLeftOf="@+id/textViewQuestion3"
@@ -117,8 +114,7 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:hint="@string/null_score"
+            android:text="@string/null_score"
             android:id="@+id/textViewScoreP1Q4"
             android:layout_below="@id/textViewScoreP1Q3"
             android:layout_toLeftOf="@+id/textViewQuestion4"
@@ -129,8 +125,8 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:hint="@string/null_score"
+            android:text="@string/null_score"
+            android:textColor="@color/white"
             android:id="@+id/textViewScoreP1Q5"
             android:layout_below="@id/textViewScoreP1Q4"
             android:layout_toLeftOf="@+id/textViewQuestion5"
@@ -141,8 +137,8 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:hint="@string/null_score"
+            android:text="@string/null_score"
+            android:textColor="@color/white"
             android:id="@+id/textViewScoreP2Q1"
             android:layout_toRightOf="@+id/textViewQuestion1"
             android:gravity="center_vertical|center_horizontal"
@@ -152,8 +148,7 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:hint="@string/null_score"
+            android:text="@string/null_score"
             android:id="@+id/textViewScoreP2Q2"
             android:layout_below="@id/textViewScoreP2Q1"
             android:layout_toRightOf="@+id/textViewQuestion2"
@@ -164,8 +159,8 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:hint="@string/null_score"
+            android:text="@string/null_score"
+            android:textColor="@color/white"
             android:id="@+id/textViewScoreP2Q3"
             android:layout_below="@id/textViewScoreP2Q2"
             android:layout_toRightOf="@+id/textViewQuestion3"
@@ -176,8 +171,7 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:hint="@string/null_score"
+            android:text="@string/null_score"
             android:id="@+id/textViewScoreP2Q4"
             android:layout_below="@id/textViewScoreP2Q3"
             android:layout_toRightOf="@+id/textViewQuestion4"
@@ -188,8 +182,8 @@
             android:layout_width="30dp"
             android:layout_height="50dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text=""
-            android:hint="@string/null_score"
+            android:text="@string/null_score"
+            android:textColor="@color/white"
             android:id="@+id/textViewScoreP2Q5"
             android:layout_below="@id/textViewScoreP2Q4"
             android:layout_toRightOf="@+id/textViewQuestion5"
