--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -119,9 +119,9 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Valider"
+        android:text="@string/button_validate"
         android:background="@drawable/buttonflat"
         android:id="@+id/button_validate"
         android:layout_marginTop="20dp"
